syntax = "proto3";

package search.v1;

option go_package = "github.com/titan-commerce/backend/search-service/proto/search/v1;searchv1";

service SearchService {
  rpc SearchProducts(SearchProductsRequest) returns (SearchProductsResponse);
  rpc IndexProduct(IndexProductRequest) returns (IndexProductResponse);
}

message SearchProductsRequest {
  string query = 1;
  int32 page = 2;
  int32 page_size = 3;
  repeated string filters = 4;
}

message SearchProductsResponse {
  repeated ProductResult results = 1;
  int32 total = 2;
}

message IndexProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  double price = 5;
  string image_url = 6;
}

message IndexProductResponse {
  bool success = 1;
}

message ProductResult {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string image_url = 5;
  float score = 6;
}
